Added request and thunkify

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
     "html-minifier": "^3.0.3",
-    "node-horseman": "^3.1.1"
+    "node-horseman": "^3.1.1",
+    "request": "^2.74.0",
+    "thunkify-wrap": "^1.0.4"
   }
 }
