--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hellobot",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -32,5 +32,9 @@
     "node-horseman": "^3.1.1",
     "request": "^2.74.0",
     "thunkify-wrap": "^1.0.4"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2"
   }
 }
